...
                    app:startIconDrawable="@android:drawable/ic_menu_search"
                    app:startIconTint="@color/text_hint"
                    android:hint="@string/search_calculator"
                    app:hintTextColor="@color/text_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:textSize="14sp"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCalculators"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingHorizontal="10dp"
        android:paddingTop="4dp"
        android:clipToPadding="false"
...
